--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitco93 - Luxury Edition</title>
+    <title>Bitco93 - Pro</title>
     <style>
+        /* إصلاح ظهور الخلفية */
         body { 
-            /* إضافة الصورة كخلفية ثابتة وتغطية الشاشة بالكامل */
-            background: url('https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/1000500633.png') no-repeat center center fixed; 
+            background-color: #000; /* لون احتياطي */
+            background-image: url('https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/1000500633.png');
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-attachment: fixed;
             background-size: cover;
             color: white; 
             text-align: center; 
@@ -19,41 +23,40 @@
             flex-direction: column; 
         }
 
-        /* طبقة شفافة بسيطة فوق الخلفية لتحسين قراءة النصوص */
+        /* طبقة حماية لضمان وضوح النصوص */
         .overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0, 0, 0, 0.3); z-index: -1;
+            background: rgba(0, 0, 0, 0.4); z-index: -1;
         }
 
         .content-area { flex: 1; display: flex; justify-content: center; align-items: center; width: 100%; padding-bottom: 90px; overflow-y: auto; z-index: 1; }
         .tab-content { display: none; width: 100%; flex-direction: column; align-items: center; padding: 20px 0; }
         .active-tab { display: flex; }
 
-        /* البطارية (عداد الطاقة) */
-        .battery-container { width: 200px; height: 30px; background: rgba(51, 51, 51, 0.8); border: 2px solid #ffd700; border-radius: 12px; position: relative; margin: 20px auto; overflow: hidden; }
+        /* البطارية */
+        .battery-container { width: 200px; height: 30px; background: rgba(50, 50, 50, 0.9); border: 2px solid #ffd700; border-radius: 12px; position: relative; margin: 20px auto; overflow: hidden; }
         .battery-fill { height: 100%; background: linear-gradient(90deg, #ffd700, #fff); width: 100%; transition: width 0.3s ease; }
         .battery-text { position: absolute; width: 100%; top: 0; left: 0; line-height: 30px; font-weight: bold; color: #fff; text-shadow: 1px 1px 2px #000; }
 
-        /* العجلة: ألوان خفيفة وأرقام سوداء */
+        /* العجلة */
         .wheel-box { position: relative; width: 260px; height: 260px; margin: 15px auto; }
         #wheel { 
             width: 100%; height: 100%; border-radius: 50%; border: 5px solid #ffd700; position: relative;
             transition: transform 4s cubic-bezier(0.17, 0.67, 0.12, 0.99); overflow: hidden;
             background: conic-gradient(#f9f9f9 0deg 45deg, #e3f2fd 45deg 90deg, #f1f8e9 90deg 135deg, #fff3e0 135deg 180deg, #fce4ec 180deg 225deg, #f3e5f5 225deg 270deg, #efebe9 270deg 315deg, #eeeeee 315deg 360deg);
         }
-        .num { position: absolute; width: 100%; height: 100%; transform: rotate(calc(45deg * var(--i))); text-align: center; font-weight: 900; font-size: 22px; color: #000; padding-top: 15px; box-sizing: border-box; }
+        .num { position: absolute; width: 100%; height: 100%; transform: rotate(calc(45deg * var(--i))); text-align: center; font-weight: 900; font-size: 20px; color: #000; padding-top: 15px; box-sizing: border-box; }
         .pointer { position: absolute; top: -10px; left: 50%; transform: translateX(-50%); width: 0; height: 0; border-left: 15px solid transparent; border-right: 15px solid transparent; border-top: 25px solid #ffd700; z-index: 10; }
 
-        /* القائمة السفلية (7 خانات كاملة) */
-        .footer { width: 100%; display: flex; justify-content: space-around; background: rgba(17, 17, 17, 0.9); padding: 10px 0; border-top: 2px solid #ffd700; position: fixed; bottom: 0; z-index: 1000; }
-        .nav-btn { background: none; border: none; color: #aaa; font-size: 8px; display: flex; flex-direction: column; align-items: center; flex: 1; cursor: pointer; }
+        /* القائمة السفلية (7 خانات) */
+        .footer { width: 100%; display: flex; justify-content: space-around; background: rgba(10, 10, 10, 0.95); padding: 10px 0; border-top: 2px solid #ffd700; position: fixed; bottom: 0; z-index: 1000; }
+        .nav-btn { background: none; border: none; color: #888; font-size: 8px; display: flex; flex-direction: column; align-items: center; flex: 1; cursor: pointer; }
         .nav-btn.active { color: #ffd700; font-weight: bold; }
         .nav-btn span { font-size: 18px; margin-bottom: 2px; }
 
-        /* البطاقات والمهام */
-        .card { background: rgba(26, 26, 26, 0.85); border-radius: 15px; width: 90%; padding: 15px; border: 1px solid #ffd700; margin-top: 10px; backdrop-filter: blur(5px); }
+        .card { background: rgba(30, 30, 30, 0.9); border-radius: 15px; width: 90%; padding: 15px; border: 1px solid #ffd700; margin-top: 10px; }
         .btn-action { background: #ffd700; color: #000; border: none; padding: 12px; border-radius: 8px; width: 100%; font-weight: bold; cursor: pointer; margin-top: 10px; }
-        .mine-btn { width: 220px; cursor: pointer; transition: 0.1s; filter: drop-shadow(0px 0px 10px rgba(255, 215, 0, 0.5)); }
+        .mine-btn { width: 220px; cursor: pointer; transition: 0.1s; filter: drop-shadow(0 0 10px #ffd700); }
         .mine-btn:active { transform: scale(0.92); }
     </style>
 </head>
@@ -64,7 +67,7 @@
 <div class="content-area">
     <div id="home" class="tab-content active-tab">
         <div id="mining-section" style="display: none;">
-            <h1 id="score" style="font-size: 60px; color: #ffd700; text-shadow: 2px 2px 10px rgba(0,0,0,0.5);">0</h1>
+            <h1 id="score" style="font-size: 60px; color: #ffd700;">0</h1>
             <img src="https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/20de4ce6-991a-4d51-8c7b-587442cab07c.png" class="mine-btn" onclick="mine()">
             <div class="battery-container">
                 <div class="battery-fill" id="energy-bar"></div>
@@ -73,16 +76,15 @@
         </div>
         <div id="lock-screen">
             <div class="card">
-                <h2 style="color: #ffd700;">⚠️ قفل التعدين</h2>
-                <p>يجب الاشتراك في القناة الرسمية أولاً لفتح نظام جمع العملات.</p>
-                <button class="btn-action" onclick="showTab('tasks', document.querySelectorAll('.nav-btn')[4])">انتقل للمهام الآن</button>
+                <h2>⚠️ التعدين مغلق</h2>
+                <p>اشترك في القناة لفتح البوت.</p>
+                <button class="btn-action" onclick="showTab('tasks', document.querySelectorAll('.nav-btn')[4])">الذهاب للمهام</button>
             </div>
         </div>
     </div>
 
     <div id="spin" class="tab-content">
-        <h2>🎡 عجلة الحظ</h2>
-        <p>المحاولات: <span id="spins-left">0</span></p>
+        <h2>🎡 العجلة</h2>
         <div class="wheel-box">
             <div class="pointer"></div>
             <div id="wheel">
@@ -92,44 +94,27 @@
                 <div class="num" style="--i:6;">75</div><div class="num" style="--i:7;">80</div>
             </div>
         </div>
-        <button onclick="startSpin()" id="spin-btn" class="btn-action" disabled>تدوير العجلة!</button>
+        <button onclick="startSpin()" id="spin-btn" class="btn-action" disabled>تدوير (المحاولات: <span id="spins-left">0</span>)</button>
     </div>
 
-    <div id="games" class="tab-content">
-        <h2>🎮 الألعاب</h2>
-        <div class="card"><p>ألعاب توقع السعر والربح قريباً!</p></div>
-    </div>
-
+    <div id="games" class="tab-content"><h2>🎮 ألعاب</h2><div class="card">قريباً</div></div>
     <div id="friends" class="tab-content">
         <div class="card">
             <h2>👥 الأصدقاء</h2>
-            <h3 style="color:#ffd700;">عدد الإحالات: <span id="ref-count">0</span></h3>
-            <button onclick="copyInvite()" class="btn-action">نسخ رابط الدعوة</button>
+            <h3>الإحالات: <span id="ref-count">0</span></h3>
+            <button onclick="copyInvite()" class="btn-action">نسخ الرابط</button>
         </div>
     </div>
-
     <div id="tasks" class="tab-content">
-        <h2>💰 المهام</h2>
         <div class="card">
-            <p><strong>📢 القناة الرسمية:</strong></p>
-            <p style="font-size: 12px; color: #eee;">تابعنا للحصول على التحديثات وسحب الأرباح.</p>
-            <a href="https://t.me/Bitco93_Bot_Channel" target="_blank" style="color:#ffd700; font-weight: bold;">انضم هنا 🚀</a>
-            <button onclick="verifySub()" class="btn-action">تحقق من الاشتراك لفتح التعدين</button>
+            <h2>💰 المهام</h2>
+            <p>انضم لقناتنا الرسمية:</p>
+            <a href="https://t.me/Bitco93_Bot_Channel" target="_blank" style="color:#ffd700;">Bitco93 Channel 🚀</a>
+            <button onclick="verifySub()" class="btn-action">تحقق لفتح التعدين</button>
         </div>
     </div>
-
-    <div id="wallet" class="tab-content">
-        <h2>👛 المحفظة</h2>
-        <div class="card"><p>رصيدك القابل للسحب: <span id="wallet-balance">0</span></p></div>
-    </div>
-
-    <div id="settings" class="tab-content">
-        <div class="card">
-            <h2>⚙️ الإعدادات</h2>
-            <label>🌐 اللغة:</label>
-            <select style="width: 100%; padding: 10px; border-radius: 5px;"><option>العربية</option><option>English</option></select>
-        </div>
-    </div>
+    <div id="wallet" class="tab-content"><h2>👛 المحفظة</h2><div class="card">الرصيد: <span id="wallet-balance">0</span></div></div>
+    <div id="settings" class="tab-content"><h2>⚙️ الإعدادات</h2><div class="card"><select><option>العربية</option><option>English</option></select></div></div>
 </div>
 
 <div class="footer">
@@ -156,37 +141,18 @@
         document.getElementById('ref-count').innerText = refs;
         document.getElementById('energy-val').innerText = energy;
         document.getElementById('energy-bar').style.width = (energy / 130 * 100) + "%";
-        
         let av = refs - usedSpins;
         document.getElementById('spins-left').innerText = av;
         document.getElementById('spin-btn').disabled = (av <= 0);
-
         if (isSubscribed) {
             document.getElementById('mining-section').style.display = 'block';
             document.getElementById('lock-screen').style.display = 'none';
         }
     }
 
-    function mine() {
-        if(isSubscribed && energy > 0) {
-            score++; energy--; updateUI();
-            localStorage.setItem('score', score);
-        }
-    }
-
-    function verifySub() {
-        isSubscribed = true;
-        localStorage.setItem('isSubscribed', 'true');
-        alert("تم التحقق! يمكنك البدء في جمع العملات الآن.");
-        updateUI();
-        showTab('home', document.querySelectorAll('.nav-btn')[0]);
-    }
-
-    function copyInvite() {
-        navigator.clipboard.writeText("https://t.me/Bitco93_bot?start=" + Math.random());
-        alert("تم نسخ رابط الدعوة!");
-    }
-
+    function mine() { if(isSubscribed && energy > 0) { score++; energy--; updateUI(); localStorage.setItem('score', score); } }
+    function verifySub() { isSubscribed = true; localStorage.setItem('isSubscribed', 'true'); updateUI(); showTab('home', document.querySelectorAll('.nav-btn')[0]); }
+    function copyInvite() { navigator.clipboard.writeText("https://t.me/Bitco93_bot?start=" + Math.random()); alert("تم النسخ!"); }
     function startSpin() {
         if((refs - usedSpins) <= 0) return;
         usedSpins++; localStorage.setItem('usedSpins', usedSpins);
@@ -196,17 +162,14 @@
         setTimeout(() => {
             const idx = Math.floor(((360 - (deg % 360)) % 360) / 45);
             score += rewards[idx]; updateUI();
-            alert("مبروك! فزت بـ " + rewards[idx]);
         }, 4000);
     }
-
     function showTab(id, btn) {
         document.querySelectorAll('.tab-content').forEach(t => t.style.display = 'none');
         document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
         document.getElementById(id).style.display = 'flex';
         btn.classList.add('active');
     }
-
     setInterval(() => { if (energy < 130) { energy++; updateUI(); } }, 3000);
     updateUI();
 </script>
